--- a/jsformhomework/largeHomework.html
+++ b/jsformhomework/largeHomework.html
@@ -10,26 +10,26 @@
 <body>
     <form>
         <fieldset>
-            <label id="name">Enter your name: 
-                <input type ="text"> 
+            <label>Enter your name: 
+                <input id="name" type ="text"> 
             </label>
 
             <br>
 
-            <label id="password">Please enter your password:
-                <input type = "password">
+            <label>Please enter your password:
+                <input id="password" type = "password">
             </label>
 
             <br>
 
-            <label id="email"> Please enter your email:
-                <input type="email">
+            <label>Please enter your email:
+                <input id="email" type="email">
             </label>
 
             <br>
 
-            <label id="aboutme">Tell us a bit about yourself:
-                <input type ="text">
+            <label>Tell us a bit about yourself:
+                <textarea id="aboutMe" type ="text"></textarea>
             </label>
 
             <br>
